--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.9.0
+beautifulsoup4==4.13.4
+bs4==0.0.2
 certifi==2025.4.26
 click==8.2.0
 dnspython==2.7.0
@@ -26,6 +28,7 @@ rich==14.0.0
 rich-toolkit==0.14.6
 shellingham==1.5.4
 sniffio==1.3.1
+soupsieve==2.7
 starlette==0.46.2
 typer==0.15.3
 typing-extensions==4.13.2
