add keybased sqlite caching (serve from db) for existing data 🔨

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
       context: .
     container_name: namaadhu-api
     ports:
-      - '4040:4040'
+      - "4040:4040"
+    volumes:
+      - ./data:/code/app/data
     restart: "unless-stopped"
